--- a/McrDDD.Domain/McrDDD.Domain.csproj
+++ b/McrDDD.Domain/McrDDD.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\McrDDD.SeedWork\McrDDD.SeedWork.csproj" />
     <ProjectReference Include="..\SeedWork\McrDDD.SeedWork.csproj" />
   </ItemGroup>
 
